added content to about me, work, and contact

--- a/index.html
+++ b/index.html
@@ -27,16 +27,33 @@
         <div>
             <h2>About Me</h2>
             <a id="About_Me"></a>
+                <p>Work History:
+                I've working in the restaurant industly for 10 years.
+                I'm currently working as a business analyst for ra small restaurant.</p>
+                <p>Hobbies:
+                I love music, I play piano and trumpet, and I'm looking into mixing</p>
         </div>
         
         <div>
             <h2>My Work</h2>
             <a id="My_Work"></a>
+                <a href="https://github.com/ehuhta/module-1-challenge">
+                    <img alt="Gihhub Repo of Challenge One" src="./assets/images/module-1-challenge-photo.png">
+                </a>
         </div>
 
         <div>
             <h2>Contact Me</h2>
             <a id="Contact_Me"></a>
+                <ul>
+                    <li>
+                        <a href="mailto: elliehuhta@gmail.com">Email Me</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/ellie-huhta-699a44167/">See Me Linked In</a>
+                    </li>
+                </ul>
+                
         </div>
     </body>
 </html>
