added css to html, move css file to appropriate spot

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Portfolio for Ellie Huhta</title> 
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
 
     <header>
@@ -37,6 +38,7 @@
         <div>
             <h2>My Work</h2>
             <a id="My_Work"></a>
+                <p></p>
                 <a href="https://github.com/ehuhta/module-1-challenge">
                     <img alt="Gihhub Repo of Challenge One" src="./assets/images/module-1-challenge-photo.png">
                 </a>
