--- a/index.html
+++ b/index.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Portfolio for Ellie Huhta</title> 
-        <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Portfolio for Ellie Huhta</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-    <header>
-        <h1>Ellie Huhta</h1> 
-        <nav>
-            <ul>
-                <li>
-                    <a href="#About_Me">About Me</a>
-                </li>
-                <li>
-                    <a href="#My_Work">My Work</a>
-                </li>
-                <li>
-                    <a href="#Contact_Me">Contact Me</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Ellie Huhta</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="#About_Me">About Me</a>
+        </li>
+        <li>
+          <a href="#My_Work">My Work</a>
+        </li>
+        <li>
+          <a href="#Contact_Me">Contact Me</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <body>
-        <div>
-            <h2>About Me</h2>
-            <a id="About_Me"></a>
-                <p>Work History:
-                I've working in the restaurant industly for 10 years.
-                I'm currently working as a business analyst for ra small restaurant.</p>
-                <p>Hobbies:
-                I love music, I play piano and trumpet, and I'm looking into mixing</p>
-        </div>
-        
-        <div>
-            <h2>My Work</h2>
-            <a id="My_Work"></a>
-                <p></p>
-                <a href="https://github.com/ehuhta/module-1-challenge">
-                    <img alt="Gihhub Repo of Challenge One" src="./assets/images/module-1-challenge-photo.png">
-                </a>
-        </div>
+  <body>
+    <div>
+      <h2>About Me</h2>
+      <a id="About_Me"></a>
+      <p>
+        Work History: I've working in the restaurant industly for 10 years. I'm
+        currently working as a business analyst for ra small restaurant.
+      </p>
+      <p>
+        Hobbies: I love music, I play piano and trumpet, and I'm looking into
+        mixing
+      </p>
+    </div>
 
-        <div>
-            <h2>Contact Me</h2>
-            <a id="Contact_Me"></a>
-                <ul>
-                    <li>
-                        <a href="mailto: elliehuhta@gmail.com">Email Me</a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/ellie-huhta-699a44167/">See Me Linked In</a>
-                    </li>
-                </ul>
-                
-        </div>
-    </body>
+    <div>
+      <h2>My Work</h2>
+      <div>
+        <a href="https://github.com/Garendemirdogen/my-own-library"
+          >My Online Library</a
+        >
+      </div>
+      <div>
+        <a href="https://github.com/ehuhta/module-1-challenge"
+          >Module 1 Challenge
+        </a>
+      </div>
+    </div>
+
+    <div>
+      <h2>Contact Me</h2>
+      <a id="Contact_Me"></a>
+      <ul>
+        <li>
+          <a href="mailto: elliehuhta@gmail.com">Email Me</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/ellie-huhta-699a44167/"
+            >See My Linked In</a
+          >
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
